Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#281 closed bug (fixed)

[Clock] loses focus

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If Clock app is started with several other apps Clock's window loses focus. Steps to reproduce: Boot Haiku and start Tracker Go to /boot/beos/apps folder and select About Haiku, Bitmap Drawing and Clock. Now press enter to load them. Then close About Haiku and you'll see Clock window without focus. Tested with rev16696 under vmware

Change History (3)

comment:1 by axeld, 19 years ago

Resolution: fixed

comment:2 by axeld, 19 years ago

Was a problem with dealing with B_AVOID_FRONT windows - fixed in hrev16811.

comment:3 by axeld, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.