* When the current focus window was closed or invisible, we used to   chose the front window as our next focus window - but this proved   to be problematic with B_AVOID_FRONT windows. Therefore, we now   simply chose the top-most window as the next focus window.   This fixes bug #281, and potentially also fixes bug #181. * This also revealed another bug in SetFocusWindow(): when the window   to have focus already had focus, but were hidden before, the focus   did not change; if that window was subsequently removed, the app_server   would have crashed.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16811 a95241bf-73f2-0310-859d-f6bbb57e9c96